--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ body {
   font-weight: 900;
   color: white;
   text-shadow: 2px 2px black;
+  margin: 0;
 }
 
 .playScreen {
@@ -34,6 +35,7 @@ body {
   z-index: 2;
   position: absolute;
   margin: 0 0.5rem;
+  gap: 2rem;
 }
 
 .playScreen button {
