--- a/src/components/Loader/style-loader.css
+++ b/src/components/Loader/style-loader.css
@@ -1,4 +1,4 @@
-.container{
+.container-loader{
     margin: 0 auto;
     width: 100vw;
     height: 100vh;
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
 }
-.playScreen{
+.loadScreen{
     align-items: center;
     text-align: center;
 }
