--- a/src/components/Loader/style-loader.css
+++ b/src/components/Loader/style-loader.css
@@ -2,10 +2,13 @@
     margin: 0 auto;
     width: 100vw;
     height: 100vh;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    background: #ff6b6b;
 }
 .loadScreen{
     align-items: center;
