--- a/src/components/LoaderScreen/style-loader.css
+++ b/src/components/LoaderScreen/style-loader.css
@@ -1,7 +1,11 @@
 .container-loader{
     margin: 0 auto;
+    position: absolute;
     width: 100vw;
     height: 100vh;
+    z-index: 1;
+    top: 0;
+    left: 0;
     
     display: flex;
     flex-direction: column;
@@ -9,6 +13,11 @@
     align-items: center;
 
     background: #ff6b6b;
+    
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 .loadScreen{
     align-items: center;
